--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <h6>Tokenomics</h6>  
                             <span><b>Token Name:</b> Cecil Network Token</span>
                             <hr>
-                            <span><b>Ticker:</b> 1 CNT = $ 0.50</span>
+                            <span><b>Ticker:</b> 1CNT = $0.10</span>
                             <hr>
                             <span><b>Total Supply:</b> 300 Million $CNT</span> 
                     </div>
@@ -152,7 +152,7 @@
                         <!-- Icon -->
                         <h6>Token Distributions</h6> 
                         <div class="service_iconn">
-                            <img src="img/core-img/g1.png" alt="">
+                            <img src="img/core-img/distribution.png" alt="">
                         </div>
                         
                     </div>
@@ -233,7 +233,7 @@
                         </div>
                         <h4 class="fadeInUp" data-wow-delay="0.3s">Cecil Decentralized Network is building an ecosystem for gig service providers to earn and make a living in a decentralized autonomous environment fostering trust and innovation.</h4>  
                         <div class="clearfix"></div>
-                        <a class="btn dream-btn mt-30 fadeInUp" data-wow-delay="0.6s" href="#">Join us on Discord</a> <a class="btn dream-btn mt-30 fadeInUp" data-wow-delay="0.6s" href="#">Join us on Twitter</a>
+                        <a class="btn dream-btn mt-30 fadeInUp" data-wow-delay="0.6s" href="https://discord.gg/V3AQ32wy">Join us on Discord</a> <a class="btn dream-btn mt-30 fadeInUp" data-wow-delay="0.6s" href="https://twitter.com/cecil_network?s=21&t=Pz8UuuBJPAIRCPPcFxzLSQ">Join us on Twitter</a>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 mt-s no-padding-right">
@@ -424,7 +424,7 @@
 
     
     <!-- ##### FAQ & Timeline Area Start ##### -->
-    <div class="faq-timeline-area section-padding-100-85" id="faq">
+    <div class="faq-timeline-area section-padding-100-85" >
         <div class="container">
             <div class="section-heading text-center">
                 <!-- Dream Dots --> 
@@ -439,7 +439,7 @@
                 </div>
                 <div class="col-sm-12"><hr></div>
             </div>
-            <div class="section-heading text-center">
+            <div class="section-heading text-center" id="faq">
                 <!-- Dream Dots -->
                 <div class="dream-dots justify-content-center fadeInUp" data-wow-delay="0.2s">
                     <span>Token FAQ</span>
