--- a/buynow.html
+++ b/buynow.html
@@ -75,7 +75,7 @@
     <!-- ##### Header Area End ##### -->
 
     <!-- ##### Welcome Area Start ##### -->
-    <section class="welcome_area clearfix dzsparallaxer auto-init none fullwidth" data-options='{direction: "normal"}' id="home" style="height: 299px!important;">
+    <section class="welcome_area clearfix dzsparallaxer auto-init none fullwidth" data-options='{direction: "normal"}' id="homee" style="height: 299px!important;">
         <div class="divimage dzsparallaxer--target" style="width: 101%; height: 130%; background-image: url(img/bg-img/bg-5.png)"></div>
 
         <!-- Hero Content -->
@@ -100,7 +100,7 @@
     <div class="clearfix"></div>
 
     <!-- ##### Our Services Area Start ##### -->
-    <section class="token section-padding-100-0 clearfix fdrfr" id="about">
+    <section class="token section-padding-100-0 clearfix fdrfr" id="aboutt">
         <div class="container">
             <div class="col-sm-3"></div>
             <div class="col-sm-6" style="margin-top: -235px; background-color: white; z-index: 8; border-radius: 10px; box-shadow: 0px 0px 3px #1010106b; padding: 28px; word-break: break-all;">
@@ -108,7 +108,7 @@
                             <img src="img/core-img/cecil_addr_qr.png">
                             <p style="color: black">addr1qxf08al50ttckamrfzxxavfpct2zlmknds8gxd7j7hr9a70vkud84z2chxnaq5y8p8jewp2pcm7ksxqpahq33e0f6cvqcauxcr</p>
                             <div style="color: black">0.10 USD = 1 CNT</div>
-                            <p style="color: black">In order to recieve CECIL Tokens, please send ADA to the provided address above, enter the transaction hash below. Your wallet address will be automatically credited with with CECIL. When ADA is confirmed.</p>
+                            <p style="color: black">In order to recieve CECIL Tokens, please send ADA to the provided address above, enter the transaction hash below. Your wallet address will be automatically credited with with CECIL when ADA is confirmed.</p>
                             <input type="text" placeholder="Enter transaction hash" style="max-width:100%;height: 39px;padding: 10px;">
                             <button class="btn btn-primary">Submit</button>
                         </div>
