Modified Buy Now Page and added annoucement

--- a/buynow.html
+++ b/buynow.html
@@ -18,7 +18,14 @@
 
     <!-- Responsive Stylesheet -->
     <link rel="stylesheet" href="css/responsive.css">
-
+    <style type="text/css">
+        #announcement{
+            background-color: #fe5399;
+            color: black;
+            font-size: 12px;
+            padding: 3px;
+        } 
+    </style>
 </head>
 
 <body class="light-version">
@@ -31,6 +38,7 @@
 
     <!-- ##### Header Area Start ##### -->
     <header class="header-area fadeInDown" data-wow-delay="0.2s">
+        <marquee id="announcement">ANNOUNCEMENT: First phase of the token sales commences soon. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ANNOUNCEMENT: First phase of the token sales commences soon. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ANNOUNCEMENT: First phase of the token sales commences soon.</marquee>
         <div class="classy-nav-container light breakpoint-off">
             <div class="container">
                 <!-- Classy Menu -->
@@ -106,9 +114,12 @@
             <div class="col-sm-6" style="margin-top: -235px; background-color: white; z-index: 8; border-radius: 10px; box-shadow: 0px 0px 3px #1010106b; padding: 28px; word-break: break-all;">
                         <div class="text-center" style="color: black">
                             <img src="img/core-img/cecil_addr_qr.png">
-                            <p style="color: black">addr1qxf08al50ttckamrfzxxavfpct2zlmknds8gxd7j7hr9a70vkud84z2chxnaq5y8p8jewp2pcm7ksxqpahq33e0f6cvqcauxcr</p>
-                            <div style="color: black">0.10 USD = 1 CNT</div>
-                            <p style="color: black">In order to recieve CECIL Tokens, please send ADA to the provided address above, enter the transaction hash below. Your wallet address will be automatically credited with with CECIL when ADA is confirmed.</p>
+                            <p style="color: black">addr1qxh5854wd5gwdvhurm37mxr5ycnsvks8srkkcf38dzvp528vkud84z2chxnaq5y8p8jewp2pcm7ksxqpahq33e0f6cvqsc6swx</p>
+                            <div style="color: black">1CNT = $0.10 USD</div>
+                           <!--  <p style="color: black">In order to recieve CECIL Tokens, please send ADA to the provided address above, enter the transaction hash below. Your wallet address will be automatically credited with with CECIL when ADA is confirmed.</p> -->
+                           <h4>How to Purchase CNT</h4>
+                            <p>To purchase CNT first buy Ada from any exchange and fund your native cardano wallet (Yoroi, Daedalus, Eternl, Nami Wallet, GeroWallet, Typhon, NuFi wallet are a few). Next, go to Cecil.network and click “buy now”, copy the address on the website, paste on your native Cardano wallet and input the desired amount of ADA necessary to make your CNT purchase. Once the network confirms your transaction- you will be credited the equivalent amount of CNT. Remember to submit your transaction hash. Our first round of our public sale- there will be a minimum purchase of 20 CNT, and a max purchase of 2000 CNT.
+                            </p>
                             <input type="text" placeholder="Enter transaction hash" style="max-width:100%;height: 39px;padding: 10px;">
                             <button class="btn btn-primary">Submit</button>
                         </div>
