--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
 
     <!-- Responsive Stylesheet -->
     <link rel="stylesheet" href="css/responsive.css">
-
+    <style type="text/css">
+        #announcement{
+            background-color: #fe5399;
+            color: black;
+            font-size: 12px;
+            padding: 3px;
+        } 
+    </style>
 </head>
 
 <body class="light-version">
@@ -30,7 +37,9 @@
     </div> -->
 
     <!-- ##### Header Area Start ##### -->
+    
     <header class="header-area fadeInDown" data-wow-delay="0.2s">
+        <marquee id="announcement">ANNOUNCEMENT: First phase of the token sales commences soon. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ANNOUNCEMENT: First phase of the token sales commences soon. &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;ANNOUNCEMENT: First phase of the token sales commences soon.</marquee>
         <div class="classy-nav-container light breakpoint-off">
             <div class="container">
                 <!-- Classy Menu -->
