coversion rate and counter figures modified

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         <h6>Tokenomics</h6>  
                             <span><b>Token Name:</b> Cecil Network Token</span>
                             <hr>
-                            <span><b>Ticker:</b> 1CNT = $0.10</span>
+                            <span><b>Ticker:</b> 1CNT = $0.10 USD</span>
                             <hr>
                             <span><b>Total Supply:</b> 300 Million $CNT</span> 
                     </div>
@@ -361,7 +361,7 @@
                         <img src="img/core-img/cecil-mobile.png" class="center-block" alt="">
                     </div>
                 </div> 
-                <div class="service-img-wrapper how col-lg-4 col-md-9 col-sm-12 mt-s no-padding-right">
+                <div class="service-img-wrapper how col-lg-6 col-md-9 col-sm-12 mt-s no-padding-right">
                     <div class="features-list">
                         <div class="who-we-contant">
                         
@@ -380,7 +380,7 @@
                         </div>
                          </div>
                 </div>
-                <div class="col-xs-10 col-sm-12 col-md-3 col-lg-2 mt-s box-list no-padding-left no-padding-right">
+                <!-- <div class="col-xs-10 col-sm-12 col-md-3 col-lg-2 mt-s box-list no-padding-left no-padding-right">
                     <div class="counter-boxed-warrper">
 
                         <div class="counter-boxed bg-cello text-center">
@@ -396,7 +396,7 @@
                           </div>
                         </div> 
                     </div>
-                </div>
+                </div> -->
                 
             </div>
         </div>
