First SEO improvement

--- a/buynow.html
+++ b/buynow.html
@@ -2,11 +2,42 @@
 <html lang="zxx">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="">
+    <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="title" content="Buy Now - Cecil Network">
+    <meta name="description" content="Make money easier and faster through a fully autonomous system managed and operated by community members who are holders of the Cecil Token.">
+    <meta name="keywords" content="Blockchain, Cryptocurrency, Token, Cardano Blockchain, Decentralized Network, Vetted Service Providers">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta property="og:title" content="Buy Now - Cecil Network">
+    <meta property="og:site_name" content="Buy Now - Cecil Network">
+    <meta property="og:url" content="http://cecil.network/buynow.html">
+    <meta property="og:description" content="Make money easier and faster through a fully autonomous system managed and operated by community members who are holders of the Cecil Token.">
+    <meta property="og:type" content="">
+    <meta property="og:image" content=https://www.cecil.network/img/core-img/logo.png>
+    <link rel="canonical" href="http://cecil.network/buynow.html" />
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "Cecil Network",
+          "alternateName": "Cecil",
+          "url": "http://cecil.network/buynow.html",
+          "logo": "https://www.cecil.network/img/core-img/logo.png",
+          "sameAs": "https://twitter.com/cecil_network?s=21&t=Pz8UuuBJPAIRCPPcFxzLSQ"
+        }
+    </script> 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-22EMY5N6XW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-22EMY5N6XW');
+    </script>
     <!-- Title -->
     <title>Buy Now - Cecil Network</title>
 
@@ -17,15 +48,7 @@
     <link rel="stylesheet" href="css/style.css?v=2">
 
     <!-- Responsive Stylesheet -->
-    <link rel="stylesheet" href="css/responsive.css">
-    <style type="text/css">
-        #announcement{
-            background-color: #fe5399;
-            color: black;
-            font-size: 12px;
-            padding: 3px;
-        } 
-    </style>
+    <link rel="stylesheet" href="css/responsive.css"> 
 </head>
 
 <body class="light-version">
@@ -45,7 +68,7 @@
                 <nav class="classy-navbar light justify-content-between" id="dreamNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand light" href="#"><img src="img/core-img/logo.png" alt="logo" style="height: 60px"><!--  Tomara  --></a>
+                    <a class="nav-brand light" href="#"><img src="img/core-img/logo.png" alt="logo" id="logoo"><!--  Tomara  --></a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler demo">
@@ -113,7 +136,7 @@
             <div class="col-sm-3"></div>
             <div class="col-sm-6" style="margin-top: -235px; background-color: white; z-index: 8; border-radius: 10px; box-shadow: 0px 0px 3px #1010106b; padding: 28px; word-break: break-all;">
                         <div class="text-center" style="color: black">
-                            <img src="img/core-img/cecil_addr_qr.png">
+                            <img src="img/core-img/cecil_addr_qr.png" alt="Buy Now">
                             <p style="color: black">addr1qxh5854wd5gwdvhurm37mxr5ycnsvks8srkkcf38dzvp528vkud84z2chxnaq5y8p8jewp2pcm7ksxqpahq33e0f6cvqsc6swx</p>
                             <div style="color: black">1CNT = $0.10 USD</div>
                            <!--  <p style="color: black">In order to recieve CECIL Tokens, please send ADA to the provided address above, enter the transaction hash below. Your wallet address will be automatically credited with with CECIL when ADA is confirmed.</p> -->
