--- a/index.html
+++ b/index.html
@@ -2,11 +2,42 @@
 <html lang="zxx">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="description" content="">
+    <meta charset="UTF-8"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="title" content="Cecil Network">
+    <meta name="description" content="Make money easier and faster through a fully autonomous system managed and operated by community members who are holders of the Cecil Token.">
+    <meta name="keywords" content="Blockchain, Cryptocurrency, Token, Cardano Blockchain, Decentralized Network, Vetted Service Providers">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta property="og:title" content="Cecil Network">
+    <meta property="og:site_name" content="Cecil Network">
+    <meta property="og:url" content="http://cecil.network"/>
+    <meta property="og:description" content="Make money easier and faster through a fully autonomous system managed and operated by community members who are holders of the Cecil Token.">
+    <meta property="og:type" content="">
+    <meta property="og:image" content=https://www.cecil.network/img/core-img/logo.png>
+    <link rel="canonical" href="http://cecil.network" />
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Organization",
+          "name": "Cecil Network",
+          "alternateName": "Cecil",
+          "url": "http://cecil.network/",
+          "logo": "https://www.cecil.network/img/core-img/logo.png",
+          "sameAs": "https://twitter.com/cecil_network?s=21&t=Pz8UuuBJPAIRCPPcFxzLSQ"
+        }
+    </script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-22EMY5N6XW"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
+      gtag('config', 'G-22EMY5N6XW');
+    </script>
     <!-- Title -->
     <title>Cecil Network</title>
 
@@ -17,15 +48,7 @@
     <link rel="stylesheet" href="css/style.css?v=1">
 
     <!-- Responsive Stylesheet -->
-    <link rel="stylesheet" href="css/responsive.css">
-    <style type="text/css">
-        #announcement{
-            background-color: #fe5399;
-            color: black;
-            font-size: 12px;
-            padding: 3px;
-        } 
-    </style>
+    <link rel="stylesheet" href="css/responsive.css"> 
 </head>
 
 <body class="light-version">
@@ -46,7 +69,7 @@
                 <nav class="classy-navbar light justify-content-between" id="dreamNav">
 
                     <!-- Logo -->
-                    <a class="nav-brand light" href="#"><img src="img/core-img/logo.png" alt="logo" style="height: 60px"><!--  Tomara  --></a>
+                    <a class="nav-brand light" href="#"><img src="img/core-img/logo.png" alt="logo" id="logoo"><!--  Tomara  --></a>
 
                     <!-- Navbar Toggler -->
                     <div class="classy-navbar-toggler demo">
@@ -161,7 +184,7 @@
                         <!-- Icon -->
                         <h6>Token Distributions</h6> 
                         <div class="service_iconn">
-                            <img src="img/core-img/distribution.png" alt="">
+                            <img src="img/core-img/distribution.png" alt="Token Distributions">
                         </div>
                         
                     </div>
@@ -172,7 +195,7 @@
                         <!-- Icon -->
                         <h6>Token Distributions</h6> 
                         <div class="service_iconn">
-                            <img src="img/core-img/g2.png" alt="">
+                            <img src="img/core-img/g2.png" alt="Token Distributions">
                         </div>
                     </div>
                 </div>
@@ -194,7 +217,7 @@
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-padding-left">
                     <div class="welcome-meter fadeInUp" data-wow-delay="0.7s">
-                        <img src="img/core-img/cardino.png"  alt="" style="border-radius: 8px;box-shadow: 11px 8px 3px #ccc;">
+                        <img src="img/core-img/cardino.png"  alt="Cardino Blockchain" style="border-radius: 8px;box-shadow: 11px 8px 3px #ccc;">
                     </div>
                 </div>
                 
@@ -247,7 +270,7 @@
                 </div>
                 <div class="col-12 col-lg-6 mt-s no-padding-right">
                     <div class="welcome-meter fadeInUp" data-wow-delay="0.7s">
-                        <img class="img-responsive center-block" alt="" src="img/core-img/about-4.png">
+                        <img class="img-responsive center-block" alt="Cecil Decentralized Network" src="img/core-img/about-4.png">
                     </div>
                 </div>
 
@@ -259,7 +282,7 @@
         <div class="section-heading text-center">
             <!-- Dream Dots -->
             <div class="dream-dots justify-content-center fadeInUp" data-wow-delay="0.2s">
-                <img src="img/svg/section-icon-5.svg" alt="">
+                <img src="img/svg/section-icon-5.svg" alt="Our Roadmap">
             </div>
             <h2 class="fadeInUp" data-wow-delay="0.3s">Our Roadmap</h2> 
         </div>
@@ -270,7 +293,7 @@
                     <div id="section_5-slider-circle">
                         <div style="left: 10%" class="data_cir cir_0" data-date="Q2 2020">
                             <div class="data_cir-content">
-                                <div><span class="roadmap_content_info">Developing the use case and basic concept of the Cecil Network</span><span class="roadmap_img"><img src="img/roadmap-icons/1.svg" alt=""></span></div>
+                                <div><span class="roadmap_content_info">Developing the use case and basic concept of the Cecil Network</span><span class="roadmap_img"><img src="img/roadmap-icons/1.svg" alt="Our Roadmap"></span></div>
                             </div>
                         </div>
                         <div style="left:15%" class="data_cir cir_1" data-date="Q3 2020">
@@ -279,7 +302,7 @@
                                     <div class="roadmap_content_info">
                                         Develop proof of concept by thorough research and in-depth analysis of the gig-economy market and structure
                                     </div>
-                                    <span class="roadmap_img"><img src="img/roadmap-icons/2.svg" alt=""></span>
+                                    <span class="roadmap_img"><img src="img/roadmap-icons/2.svg" alt="Our Roadmap"></span>
                                 </div>
                             </div>
                         </div>
@@ -287,56 +310,56 @@
                             <div class="data_cir-content">
                                 <div><div class="roadmap_content_info">
                                     Team onboarding
-                                </div><span class="roadmap_img"><img src="img/roadmap-icons/3.svg" alt=""></span></div>
+                                </div><span class="roadmap_img"><img src="img/roadmap-icons/3.svg" alt="Our Roadmap"></span></div>
                             </div>
                         </div>
                         <div style="left:35%" class="data_cir cir_3" data-date="Q1 2021">
                             <div class="data_cir-content">
                                 <div><div class="roadmap_content_info">
                                     Sketching the design and Dao structures for Cecil Network
-                                </div><span class="roadmap_img"><img src="img/roadmap-icons/4.svg" alt=""></span></div>
+                                </div><span class="roadmap_img"><img src="img/roadmap-icons/4.svg" alt="Our Roadmap"></span></div>
                             </div>
                         </div>
                         <div style="left:40%" class="data_cir cir_4 red_crc" data-date="Q2 2021">
                             <div class="data_cir-content">
                                 <div><div class="roadmap_content_info">
                                     Sampling the design and scaling the proof of concept
-                                </div><span class="roadmap_img"><img src="img/roadmap-icons/5.svg" alt=""></span></div>
+                                </div><span class="roadmap_img"><img src="img/roadmap-icons/5.svg" alt="Our Roadmap"></span></div>
                             </div>
                         </div>
                         <div style="left:53%" class="data_cir cir_5 next" data-date="Q3 2021">
                             <div class="data_cir-content">
                                 <div><div class="roadmap_content_info">
                                     Develop a launch pad, building a website for the Cecil Network
-                                </div><span class="roadmap_img"><img src="img/roadmap-icons/6.svg" alt=""></span></div>
+                                </div><span class="roadmap_img"><img src="img/roadmap-icons/6.svg" alt="Our Roadmap"></span></div>
                             </div>
                         </div>
                         <div style="left:60%" class="data_cir cir_6 next" data-date="Q4 2021">
                             <div class="data_cir-content">
                                 <div><div class="roadmap_content_info">
                                     Commence private sale to raise funds for the development of the Cecil Network ecosystem.
-                                </div><span class="roadmap_img"><img src="img/roadmap-icons/7.svg" alt=""></span></div>
+                                </div><span class="roadmap_img"><img src="img/roadmap-icons/7.svg" alt="Our Roadmap"></span></div>
                             </div>
                         </div>
                         <div style="left:70%" class="data_cir cir_7 next" data-date="Q1 2022">
                             <div class="data_cir-content">
                                 <div><div class="roadmap_content_info">
                                     List on Exchanges, CMC, Coin gecko
-                                </div><span class="roadmap_img"><img src="img/roadmap-icons/8.svg" alt=""></span></div>
+                                </div><span class="roadmap_img"><img src="img/roadmap-icons/8.svg" alt="Our Roadmap"></span></div>
                             </div>
                         </div>
                         <div style="left:80%" class="data_cir cir_8 next" data-date="Q2 2022">
                             <div class="data_cir-content">
                                 <div><div class="roadmap_content_info">
                                     Launch Dapp and on board DAO governance body system
-                                </div><span class="roadmap_img"><img src="img/roadmap-icons/9.svg" alt=""></span></div>
+                                </div><span class="roadmap_img"><img src="img/roadmap-icons/9.svg" alt="Our Roadmap"></span></div>
                             </div>
                         </div>
                         <div style="left:90%" class="data_cir cir_9 next" data-date="Q2 2022">
                             <div class="data_cir-content">
                                 <div><div class="roadmap_content_info">
                                     Continuous Research and development, collaborations and partnerships
-                                </div><span class="roadmap_img"><img src="img/roadmap-icons/9.svg" alt=""></span></div>
+                                </div><span class="roadmap_img"><img src="img/roadmap-icons/9.svg" alt="Our Roadmap"></span></div>
                             </div>
                         </div>
                     </div>
@@ -358,7 +381,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 col-xs-12">
                     <div class="welcome-meter fadeInUp" data-wow-delay="0.7s">
-                        <img src="img/core-img/cecil-mobile.png" class="center-block" alt="">
+                        <img src="img/core-img/cecil-mobile.png" class="center-block" alt="Cecil Mobile">
                     </div>
                 </div> 
                 <div class="service-img-wrapper how col-lg-6 col-md-9 col-sm-12 mt-s no-padding-right">
@@ -375,8 +398,8 @@
                             <li class="text-white"><i class="fa fa-check"></i>Creative Layout</li>
                         </ul> -->
                         <div class="app-download-buttons">
-                            <img src="img/core-img/google-play.png">
-                            <img src="img/core-img/app-store.png">
+                            <img src="img/core-img/google-play.png" alt="Download on Playstore">
+                            <img src="img/core-img/app-store.png" alt="Download on Apple Store">
                         </div>
                          </div>
                 </div>
@@ -412,13 +435,13 @@
 
                 <div class="col-lg-6 col-xs-12">
                     <div class="welcome-meter fadeInUp" data-wow-delay="0.7s">
-                        <img src="img/core-img/whitepaper.png" class="center-block" alt="">
+                        <img src="img/core-img/whitepaper.png" class="center-block" alt="Whitepaper">
                     </div>
                 </div> 
                 <div class="col-lg-6 col-xs-12 mt-s">
                     <div class="who-we-contant">
                         <div class="dream-dots text-left fadeInUp" data-wow-delay="0.2s" style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-                            <img src="img/svg/section-icon-11.svg" alt="">
+                            <img src="img/svg/section-icon-11.svg" alt="Whitepaper">
                         </div>
                         <h4 class="text-white fadeInUp" data-wow-delay="0.3s">Download Our Whitepaper</h4>
                         <a class="btn dream-btn mt-30 fadeInUp" data-wow-delay="0.6s" href="doc/cecil_whitepaper.pdf">
@@ -441,7 +464,7 @@
             </div>
             <div class="row align-items-center">
                 <div class="col-12 col-lg-3">
-                    <img src="img/core-img/justin-howard.jpg" alt="" class="center-block img-responsive" style="border-radius: 50%;">
+                    <img src="img/core-img/justin-howard.jpg" alt="Justie Howard" class="center-block img-responsive" style="border-radius: 50%;">
                 </div>
                 <div class="col-12 col-lg-9">
                     <p>For 25+ years, Justin Howard has led and created businesses. His passion for the crypto world began in 2014 when he bought his first Bitcoin. His entrepreneurial experience and business knowledge is now moving into the blockchain space with the creation of Cecil.</p> <p>A platform that will revolutionize how service providers get paid and find work!</p>
@@ -453,11 +476,11 @@
                 <div class="dream-dots justify-content-center fadeInUp" data-wow-delay="0.2s">
                     <span>Token FAQ</span>
                 </div>
-                <h2 class="fadeInUp" data-wow-delay="0.3s">  Frequently Questions</h2>
+                <h2 class="fadeInUp" data-wow-delay="0.3s">  Frequently Asked Questions</h2>
             </div>
             <div class="row align-items-center">
                 <div class="col-12 col-lg-6 offset-lg-0 col-md-8 offset-md-2 col-sm-12">
-                    <img src="img/core-img/faq.png" alt="" class="center-block img-responsive">
+                    <img src="img/core-img/faq.png" alt="Frequently Asked Questions" class="center-block img-responsive">
                 </div>
                 <div class="col-12 col-lg-6 col-md-12">
                     <div class="dream-faq-area mt-s ">
